--- a/feladat.html
+++ b/feladat.html
@@ -21,3 +21,9 @@ USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
 UnitedKingdom_LFCBebington, not updated, 0.0<br />
 Finland_Nurmijarvi, <b>updated</b>, 183, <a href="https://www.munzee.com/map/ud9xe05ek/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Nurmijarvi.json" target="_blank">json</a><br />
+Finland_Hyvinkaa, not updated, 0.0<br />
+USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, not updated, 0.5499999999999972<br />
+Netherlands_TeaAtGrandma, <b>updated</b>, 482, <a href="https://www.munzee.com/map/u1kh9uc8m/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_TeaAtGrandma.json" target="_blank">json</a><br />
