--- a/feladat.html
+++ b/feladat.html
@@ -151,3 +151,11 @@ Slovakia_HungryBatTerry kihagyva (100%), <br />
 USA_LakevillesSeaTurtle, not updated, 0.9000000000000057<br />
 USA_LightningBoltInSapphire, <b>updated</b>, 219, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
 USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 231, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
+Germany_Bullseye kihagyva (100%), <br />
+Finland_TampereElectric, not updated, 0.0<br />
+USA_MontgomeryBaseball, not updated, 0.0<br />
+USA_HanksBoots, not updated, 0.0<br />
+USA_ColorTheZoo, not updated, 0.0<br />
+Netherlands_SupermanVsBatman kihagyva (100%), <br />
+Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
+Slovakia_IcemenInLove, <b>updated</b>, 315, <a href="https://www.munzee.com/map/u2s1yzv55/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_IcemenInLove.json" target="_blank">json</a><br />
