--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.11.05 01:10:12<br />
+<b>start</b> - 2022.11.06 01:10:10<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -12,7 +12,7 @@ Slovakia_ChristmasStable, not updated, 0.0<br />
 Slovakia_LePetitPrince, not updated, 0.0<br />
 Australia_TicTacMunzee kihagyva (100%), <br />
 Hungary_FlatMattInBudapest, not updated, 0.0<br />
-USA_PrattvillePansy, not updated, 0.1700000000000017<br />
+USA_PrattvillePansy, not updated, 0.6599999999999966<br />
 Hungary_MinerSymbol, not updated, 0.0<br />
 Hungary_Crossbow, not updated, 0.1700000000000017<br />
 USA_MunzeeLogo, not updated, 0.0<br />
@@ -20,13 +20,13 @@ NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
 USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
 USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
 UnitedKingdom_LFCBebington, not updated, 0.0<br />
-Finland_Nurmijarvi, <b>updated</b>, 183, <a href="https://www.munzee.com/map/ud9xe05ek/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Finland_Nurmijarvi.json" target="_blank">json</a><br />
+Finland_Nurmijarvi, not updated, 0.8999999999999915<br />
 Finland_Hyvinkaa, not updated, 0.0<br />
 USA_CanonCity, not updated, 0.0<br />
 UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
 Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
 USA_LakewoodPrizewheel, not updated, 0.5499999999999972<br />
-Netherlands_TeaAtGrandma, <b>updated</b>, 482, <a href="https://www.munzee.com/map/u1kh9uc8m/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_TeaAtGrandma.json" target="_blank">json</a><br />
+Netherlands_TeaAtGrandma, not updated, 1.0<br />
 Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
@@ -148,76 +148,4 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, not updated, 0.9000000000000057<br />
-USA_LightningBoltInSapphire, <b>updated</b>, 219, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
-USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 231, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
-Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, not updated, 0.0<br />
-USA_MontgomeryBaseball, not updated, 0.0<br />
-USA_HanksBoots, not updated, 0.0<br />
-USA_ColorTheZoo, not updated, 0.0<br />
-Netherlands_SupermanVsBatman kihagyva (100%), <br />
-Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
-Slovakia_IcemenInLove, <b>updated</b>, 315, <a href="https://www.munzee.com/map/u2s1yzv55/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_IcemenInLove.json" target="_blank">json</a><br />
-Slovakia_TrencinCastle, not updated, 0.0<br />
-UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
-Australia_PiratePetesParrot kihagyva (100%), <br />
-UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
-UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
-UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
-USA_PiratesTreasure kihagyva (100%), <br />
-Australia_QueenslandKoala kihagyva (100%), <br />
-USA_GiraffeInGadsden kihagyva (100%), <br />
-USA_AnaheimSapphire kihagyva (100%), <br />
-Finland_HelsinkiColour kihagyva (100%), <br />
-USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
-Germany_SkylarkFeldlerche kihagyva (100%), <br />
-Netherlands_MysteryBikeField kihagyva (100%), <br />
-Australia_Brisbane, not updated, 0.0<br />
-Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.0<br />
-Germany_DiamantBerlin, not updated, 0.0<br />
-Germany_BerlinBear, not updated, 0.0<br />
-Germany_HonowWappen, not updated, 0.0<br />
-Canada_GatineauEvo, not updated, 0.0<br />
-Germany_ColorsBonn kihagyva (100%), <br />
-Germany_BTHVN2020 kihagyva (100%), <br />
-Canada_GatineauScarletTulip kihagyva (100%), <br />
-Canada_RumballMachine kihagyva (100%), <br />
-Canada_OttawaFireworks kihagyva (100%), <br />
-Canada_HospitalLove kihagyva (100%), <br />
-Hungary_Q94 kihagyva (100%), <br />
-Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
-Hungary_RWG kihagyva (100%), <br />
-Hungary_Grail kihagyva (100%), <br />
-Hungary_DVTKInMiskolc, not updated, 0.0<br />
-Hungary_Beagle kihagyva (100%), <br />
-Hungary_ElectricDebrecen, not updated, 0.7125890736342058<br />
-Hungary_KodalysViolin kihagyva (100%), <br />
-Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
-Hungary_64color kihagyva (100%), <br />
-Hungary_ShieldBudapest, not updated, 0.0<br />
-Hungary_ShieldMiskolc, not updated, 0.0<br />
-Hungary_ShieldEger, not updated, 0.0<br />
-Hungary_MunzeeLogo kihagyva (100%), <br />
-Hungary_GreatChurch kihagyva (100%), <br />
-Canada_SpringInOttawa kihagyva (100%), <br />
-Canada_OttawaNewYears kihagyva (100%), <br />
-Canada_SummerInOttawa kihagyva (100%), <br />
-USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.0<br />
-USA_ChristmasWreath kihagyva (100%), <br />
-USA_WinterOlympics2018 kihagyva (100%), <br />
-USA_R2D2 kihagyva (100%), <br />
-USA_TwinCitiesSnowman kihagyva (100%), <br />
-USA_SimpsonsDonut kihagyva (100%), <br />
-USA_AppleValleyEagle, not updated, 0.0<br />
-USA_DorothyToTheEmerald kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-Netherlands_city_Lemmer, <b>updated</b>, <a href="https://www.munzee.com/map/u1khdnhch/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_city_Lemmer.json" target="_blank">json</a><br />
-Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
-----felhasználók<br />
-Neloras_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vzfpn/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_empty.json" target="_blank">json</a><br />
-<b>stop</b> - 2022.11.05 01:43:36<br />
-összesen 2004<br />
+USA_LakevillesSeaTurtle, <b>updated</b>, 1152, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a><br />
