--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2022.11.06 01:10:10<br />
+<b>start</b> - 2022.11.07 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
 USA_PrattvilleTrillium, not updated, 0.9200000000000017<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -44.470000000000006<br />
+Hungary_VotiveChurch, not updated, -44.290000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
@@ -148,9 +148,9 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, <b>updated</b>, 1152, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a><br />
-USA_LightningBoltInSapphire, <b>updated</b>, 278, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
-USA_AppleValley-EvolutionaryFlower, <b>updated</b>, 334, <a href="https://www.munzee.com/map/9zvwqtjtx/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleValley-EvolutionaryFlower.json" target="_blank">json</a><br />
+USA_LakevillesSeaTurtle, not updated, 0.4000000000000057<br />
+USA_LightningBoltInSapphire, not updated, 0.7000000000000028<br />
+USA_AppleValley-EvolutionaryFlower, not updated, 0.20000000000000284<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, not updated, 0.49833887043189407<br />
 USA_MontgomeryBaseball, not updated, 0.0<br />
@@ -216,5 +216,5 @@ USA_DorothyToTheEmerald kihagyva (100%), <br />
 ----csoportok<br />
 ----városok<br />
 ----felhasználók<br />
-<b>stop</b> - 2022.11.06 01:49:20<br />
-összesen 2350<br />
+<b>stop</b> - 2022.11.07 01:20:38<br />
+összesen 630<br />
