--- a/feladat.html
+++ b/feladat.html
@@ -3,3 +3,13 @@ Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
 USA_PrattvilleTrillium, <b>updated</b>, 236, <a href="https://www.munzee.com/map/djf8bbhmk/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PrattvilleTrillium.json" target="_blank">json</a><br />
+Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
+Hungary_TatabanyaBlackhole, not updated, 0.0<br />
+Hungary_VotiveChurch, not updated, -44.470000000000006<br />
+Germany_WappenHalberstadt, not updated, 0.0<br />
+UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
+Slovakia_ChristmasStable, not updated, 0.0<br />
+Slovakia_LePetitPrince, not updated, 0.0<br />
+Australia_TicTacMunzee kihagyva (100%), <br />
+Hungary_FlatMattInBudapest, not updated, 0.0<br />
+USA_PrattvillePansy, <b>updated</b>, 676, <a href="https://www.munzee.com/map/djf88xhm3/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PrattvillePansy.json" target="_blank">json</a><br />
