--- a/feladat.html
+++ b/feladat.html
@@ -215,3 +215,4 @@ USA_AppleValleyEagle, not updated, 0.0<br />
 USA_DorothyToTheEmerald kihagyva (100%), <br />
 USA_BabyYodaLovesMunzeeMania2020, <b>updated</b>, 405, <a href="https://www.munzee.com/map/9zvwm7nt6/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BabyYodaLovesMunzeeMania2020.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_KavicsbanyaKecskemet, <b>updated</b>, 151, <a href="https://www.munzee.com/map/u2mfztk6u/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_KavicsbanyaKecskemet.json" target="_blank">json</a> <b>100%</b><br />
+Hungary_GyorVgFarm, <b>updated</b>, 111, <a href="https://www.munzee.com/map/u2kx642nx/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_GyorVgFarm.json" target="_blank">json</a> <b>100%</b><br />
