--- a/feladat.html
+++ b/feladat.html
@@ -224,3 +224,4 @@ Hungary_60Color, <b>updated</b>, 78, <a href="https://www.munzee.com/map/u2rqk5m
 Hungary_Cata-Joy, <b>updated</b>, 95, <a href="https://www.munzee.com/map/u2rq7208j/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Cata-Joy.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_FlatDebrecen, <b>updated</b>, 269, <a href="https://www.munzee.com/map/u2rqk56jy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_FlatDebrecen.json" target="_blank">json</a><br />
 Hungary_Debrecen, <b>updated</b>, 121, <a href="https://www.munzee.com/map/u2rqk5cfd/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Debrecen.json" target="_blank">json</a><br />
+Hungary_EvolutionDebrecen, <b>updated</b>, 173, <a href="https://www.munzee.com/map/u2rqk5174/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_EvolutionDebrecen.json" target="_blank">json</a> <b>100%</b><br />
