--- a/feladat.html
+++ b/feladat.html
@@ -226,3 +226,4 @@ Hungary_FlatDebrecen, <b>updated</b>, 269, <a href="https://www.munzee.com/map/u
 Hungary_Debrecen, <b>updated</b>, 121, <a href="https://www.munzee.com/map/u2rqk5cfd/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Debrecen.json" target="_blank">json</a><br />
 Hungary_EvolutionDebrecen, <b>updated</b>, 173, <a href="https://www.munzee.com/map/u2rqk5174/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_EvolutionDebrecen.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_JewelSandwich, <b>updated</b>, 70, <a href="https://www.munzee.com/map/u2rqk555v/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_JewelSandwich.json" target="_blank">json</a><br />
+Hungary_Cimbi, <b>updated</b>, 426, <a href="https://www.munzee.com/map/u2rq7vk57/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Cimbi.json" target="_blank">json</a> <b>100%</b><br />
