--- a/feladat.html
+++ b/feladat.html
@@ -228,3 +228,4 @@ Hungary_EvolutionDebrecen, <b>updated</b>, 173, <a href="https://www.munzee.com/
 Hungary_JewelSandwich, <b>updated</b>, 70, <a href="https://www.munzee.com/map/u2rqk555v/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_JewelSandwich.json" target="_blank">json</a><br />
 Hungary_Cimbi, <b>updated</b>, 426, <a href="https://www.munzee.com/map/u2rq7vk57/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Cimbi.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_Picu, <b>updated</b>, 288, <a href="https://www.munzee.com/map/u2rqkn2gm/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Picu.json" target="_blank">json</a> <b>100%</b><br />
+Hungary_Honey, <b>updated</b>, 749, <a href="https://www.munzee.com/map/u2rqkq0ze/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Honey.json" target="_blank">json</a> <b>100%</b><br />
