--- a/feladat.html
+++ b/feladat.html
@@ -229,3 +229,4 @@ Hungary_JewelSandwich, <b>updated</b>, 70, <a href="https://www.munzee.com/map/u
 Hungary_Cimbi, <b>updated</b>, 426, <a href="https://www.munzee.com/map/u2rq7vk57/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Cimbi.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_Picu, <b>updated</b>, 288, <a href="https://www.munzee.com/map/u2rqkn2gm/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Picu.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_Honey, <b>updated</b>, 749, <a href="https://www.munzee.com/map/u2rqkq0ze/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Honey.json" target="_blank">json</a> <b>100%</b><br />
+Hungary_QR, <b>updated</b>, 475, <a href="https://www.munzee.com/map/u2rqkgr9r/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_QR.json" target="_blank">json</a> <b>100%</b><br />
