--- a/feladat.html
+++ b/feladat.html
@@ -230,3 +230,4 @@ Hungary_Cimbi, <b>updated</b>, 426, <a href="https://www.munzee.com/map/u2rq7vk5
 Hungary_Picu, <b>updated</b>, 288, <a href="https://www.munzee.com/map/u2rqkn2gm/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Picu.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_Honey, <b>updated</b>, 749, <a href="https://www.munzee.com/map/u2rqkq0ze/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Honey.json" target="_blank">json</a> <b>100%</b><br />
 Hungary_QR, <b>updated</b>, 475, <a href="https://www.munzee.com/map/u2rqkgr9r/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_QR.json" target="_blank">json</a> <b>100%</b><br />
+Hungary_DebreceniKereszt, <b>updated</b>, 87, <a href="https://www.munzee.com/map/u2rqk7rjj/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_DebreceniKereszt.json" target="_blank">json</a> <b>100%</b><br />
