--- a/feladat.html
+++ b/feladat.html
@@ -1,8 +1,8 @@
-<b>start</b> - 2022.11.07 17:48:39<br />
+<b>start</b> - 2022.11.07 20:54:08<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
-USA_PrattvilleTrillium, <b>updated</b>, 236, <a href="https://www.munzee.com/map/djf8bbhmk/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PrattvilleTrillium.json" target="_blank">json</a><br />
+USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
 Hungary_VotiveChurch, not updated, -44.470000000000006<br />
@@ -12,7 +12,7 @@ Slovakia_ChristmasStable, not updated, 0.0<br />
 Slovakia_LePetitPrince, not updated, 0.0<br />
 Australia_TicTacMunzee kihagyva (100%), <br />
 Hungary_FlatMattInBudapest, not updated, 0.0<br />
-USA_PrattvillePansy, <b>updated</b>, 676, <a href="https://www.munzee.com/map/djf88xhm3/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PrattvillePansy.json" target="_blank">json</a><br />
+USA_PrattvillePansy, not updated, 0.0<br />
 Hungary_MinerSymbol, not updated, 0.0<br />
 Hungary_Crossbow, not updated, 0.1700000000000017<br />
 USA_MunzeeLogo, not updated, 0.0<br />
@@ -148,8 +148,8 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, <b>updated</b>, 1192, <a href="https://www.munzee.com/map/9zvwq5uf3/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LakevillesSeaTurtle.json" target="_blank">json</a><br />
-USA_LightningBoltInSapphire, <b>updated</b>, 267, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
+USA_LakevillesSeaTurtle, not updated, 0.0<br />
+USA_LightningBoltInSapphire, not updated, 0.0<br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.5<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, not updated, 0.49833887043189407<br />
@@ -213,23 +213,24 @@ USA_TwinCitiesSnowman kihagyva (100%), <br />
 USA_SimpsonsDonut kihagyva (100%), <br />
 USA_AppleValleyEagle, not updated, 0.0<br />
 USA_DorothyToTheEmerald kihagyva (100%), <br />
-USA_BabyYodaLovesMunzeeMania2020, <b>updated</b>, 405, <a href="https://www.munzee.com/map/9zvwm7nt6/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BabyYodaLovesMunzeeMania2020.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_KavicsbanyaKecskemet, <b>updated</b>, 151, <a href="https://www.munzee.com/map/u2mfztk6u/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_KavicsbanyaKecskemet.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_GyorVgFarm, <b>updated</b>, 111, <a href="https://www.munzee.com/map/u2kx642nx/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_GyorVgFarm.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_GyoriVasutiKert, <b>updated</b>, 115, <a href="https://www.munzee.com/map/u2kx609yv/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_GyoriVasutiKert.json" target="_blank">json</a><br />
-Hungary_Colors, <b>updated</b>, 139, <a href="https://www.munzee.com/map/u2rqe2txv/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Colors.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_TocoskertsArrows2, <b>updated</b>, 103, <a href="https://www.munzee.com/map/u2rq7shg2/15.92" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_TocoskertsArrows2.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_TocoskertsArrows3, <b>updated</b>, 81, <a href="https://www.munzee.com/map/u2rq7shg2/15.93" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_TocoskertsArrows3.json" target="_blank">json</a><br />
-Hungary_60Color, <b>updated</b>, 78, <a href="https://www.munzee.com/map/u2rqk5m6n/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_60Color.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_Cata-Joy, <b>updated</b>, 95, <a href="https://www.munzee.com/map/u2rq7208j/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Cata-Joy.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_FlatDebrecen, <b>updated</b>, 269, <a href="https://www.munzee.com/map/u2rqk56jy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_FlatDebrecen.json" target="_blank">json</a><br />
-Hungary_Debrecen, <b>updated</b>, 121, <a href="https://www.munzee.com/map/u2rqk5cfd/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Debrecen.json" target="_blank">json</a><br />
-Hungary_EvolutionDebrecen, <b>updated</b>, 173, <a href="https://www.munzee.com/map/u2rqk5174/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_EvolutionDebrecen.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_JewelSandwich, <b>updated</b>, 70, <a href="https://www.munzee.com/map/u2rqk555v/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_JewelSandwich.json" target="_blank">json</a><br />
-Hungary_Cimbi, <b>updated</b>, 426, <a href="https://www.munzee.com/map/u2rq7vk57/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Cimbi.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_Picu, <b>updated</b>, 288, <a href="https://www.munzee.com/map/u2rqkn2gm/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Picu.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_Honey, <b>updated</b>, 749, <a href="https://www.munzee.com/map/u2rqkq0ze/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_Honey.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_QR, <b>updated</b>, 475, <a href="https://www.munzee.com/map/u2rqkgr9r/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_QR.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_DebreceniKereszt, <b>updated</b>, 87, <a href="https://www.munzee.com/map/u2rqk7rjj/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_DebreceniKereszt.json" target="_blank">json</a> <b>100%</b><br />
-Hungary_60Flat, <b>updated</b>, 78, <a href="https://www.munzee.com/map/u2rqk5m38/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_60Flat.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_TheLondonDonutCat, <b>updated</b>, 364, <a href="https://www.munzee.com/map/gcpvr83c6/15.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TheLondonDonutCat.json" target="_blank">json</a><br />
+USA_BabyYodaLovesMunzeeMania2020 kihagyva (100%), <br />
+Hungary_KavicsbanyaKecskemet kihagyva (100%), <br />
+Hungary_GyorVgFarm kihagyva (100%), <br />
+Hungary_GyoriVasutiKert, not updated, 0.0<br />
+Hungary_Colors kihagyva (100%), <br />
+Hungary_TocoskertsArrows2 kihagyva (100%), <br />
+Hungary_TocoskertsArrows3, not updated, -69.0<br />
+Hungary_60Color kihagyva (100%), <br />
+Hungary_Cata-Joy kihagyva (100%), <br />
+Hungary_FlatDebrecen, not updated, 0.0<br />
+Hungary_Debrecen, not updated, -69.0<br />
+Hungary_EvolutionDebrecen kihagyva (100%), <br />
+Hungary_JewelSandwich, not updated, 0.0<br />
+Hungary_Cimbi kihagyva (100%), <br />
+Hungary_Picu kihagyva (100%), <br />
+Hungary_Honey kihagyva (100%), <br />
+Hungary_QR kihagyva (100%), <br />
+Hungary_DebreceniKereszt kihagyva (100%), <br />
+Hungary_60Flat kihagyva (100%), <br />
+UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
+UnitedKingdom_HeathrowCrossbowArrow, <b>updated</b>, 638, <a href="https://www.munzee.com/map/gcpsyt1y9/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HeathrowCrossbowArrow.json" target="_blank">json</a> <b>100%</b><br />
