--- a/feladat.html
+++ b/feladat.html
@@ -235,3 +235,4 @@ Hungary_60Flat kihagyva (100%), <br />
 UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
 UnitedKingdom_HeathrowCrossbowArrow, <b>updated</b>, 638, <a href="https://www.munzee.com/map/gcpsyt1y9/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HeathrowCrossbowArrow.json" target="_blank">json</a> <b>100%</b><br />
 UnitedKingdom_JustSmileLondon, <b>updated</b>, 839, <a href="https://www.munzee.com/map/gcpvn9cq4/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_JustSmileLondon.json" target="_blank">json</a><br />
+UnitedKingdom_HeathrowFlatSquares, <b>updated</b>, 151, <a href="https://www.munzee.com/map/gcpsykxuu/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HeathrowFlatSquares.json" target="_blank">json</a><br />
