--- a/feladat.html
+++ b/feladat.html
@@ -241,3 +241,13 @@ UnitedKingdom_RuleBritanniaArrow, <b>updated</b>, 274, <a href="https://www.munz
 UnitedKingdom_CherryLaneCemetery-CrossGarden, <b>updated</b>, 149, <a href="https://www.munzee.com/map/gcpsvygmw/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_CherryLaneCemetery-CrossGarden.json" target="_blank">json</a> <b>100%</b><br />
 UnitedKingdom_EvolutionStrip, <b>updated</b>, 234, <a href="https://www.munzee.com/map/gcpsys5xc/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_EvolutionStrip.json" target="_blank">json</a> <b>100%</b><br />
 UnitedKingdom_WestLondonJewel, <b>updated</b>, 95, <a href="https://www.munzee.com/map/gcpsywswp/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_WestLondonJewel.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+Hungary_city_Debrecen, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqs2c96/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Debrecen.json" target="_blank">json</a><br />
+USA_city_Prattville, <b>updated</b>, <a href="https://www.munzee.com/map/djf88xhm3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Prattville.json" target="_blank">json</a><br />
+----felhasználók<br />
+delfin13_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqkgr9r/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/delfin13_completed.json" target="_blank">json</a><br />
+Norbee97_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqk7rjj/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_completed.json" target="_blank">json</a><br />
+Norbee97_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2rq7fsvq/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_empty.json" target="_blank">json</a><br />
+<b>stop</b> - 2022.11.07 21:46:44<br />
+összesen 3155<br />
