--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.11.07 20:54:08<br />
+<b>start</b> - 2022.11.08 01:10:07<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.8875739644970366<br />
@@ -43,211 +43,4 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.3623188405797144<br />
-USA_Turtle, not updated, 0.9700176366842967<br />
-Finland_BioOtokka, not updated, 0.0<br />
-Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
-Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
-Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
-Switzerland_GiddyUpGo, not updated, 0.0<br />
-Belgium_KnokkeHeist, not updated, 0.25<br />
-Hungary_Evolution, not updated, 0.8333333333333286<br />
-Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
-USA_OfficerDown, not updated, 0.0<br />
-Hungary_Brigetio, not updated, 0.3846153846153797<br />
-Hungary_GoatInKecskemet, not updated, 0.7099999999999937<br />
-Hungary_TaskasSmiley, not updated, 0.9933774834437088<br />
-Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
-Slovakia_FlagOfSlovakia, not updated, 0.6500000000000021<br />
-Hungary_SurpriseAirline, not updated, 0.0<br />
-Hungary_RubiksCube, not updated, 0.0<br />
-Hungary_GyulaCastle, not updated, 0.0<br />
-USA_2019TexasChallenge, not updated, 0.28999999999999915<br />
-USA_FortMyersAlligator, not updated, 0.0<br />
-Denmark_TheSwanInHilleroed, not updated, 0.0<br />
-Hungary_CsepelObol, not updated, 0.0<br />
-Hungary_CsepelVasEsFemmuvekLogo, not updated, 0.0<br />
-Czechia_KMZNAK, not updated, 0.0799999999999983<br />
-Luxembourg_LuxembourgFlag, not updated, 0.0<br />
-USA_MarioFireballVoid, not updated, 0.0<br />
-USA_SpyGoggles, not updated, 0.0<br />
-Hungary_Farkas-erdo, not updated, 0.0<br />
-Hungary_CastleOfDiosgyor, not updated, 0.0<br />
-Denmark_GhostInHilleroed, not updated, 0.0<br />
-USA_CherryBomb kihagyva (100%), <br />
-USA_Stormtrooper kihagyva (100%), <br />
-Australia_BeeFlowers kihagyva (100%), <br />
-Australia_BeeSanta kihagyva (100%), <br />
-Australia_BuzzzBee kihagyva (100%), <br />
-Australia_LaidleyBeeHive kihagyva (100%), <br />
-Canada_JumpingJanuaryJamboree kihagyva (100%), <br />
-Canada_MaillardvilleChristmas kihagyva (100%), <br />
-Finland_KokkolanKurpitsainen kihagyva (100%), <br />
-Hungary_10thBirthdayCake kihagyva (100%), <br />
-Hungary_BlackCat kihagyva (100%), <br />
-Hungary_ChainBridge kihagyva (100%), <br />
-Hungary_CrossbowOnHarmashatarhegy kihagyva (100%), <br />
-Hungary_DuckAtBalaton kihagyva (100%), <br />
-Hungary_FlagsInBudapest, not updated, 0.0<br />
-Hungary_FlowerCarnivalInDebrecen kihagyva (100%), <br />
-Hungary_FrogInBudaors kihagyva (100%), <br />
-Hungary_SantasSledge kihagyva (100%), <br />
-Hungary_SnoopyInBudapest kihagyva (100%), <br />
-Hungary_SteamshipOnDanube kihagyva (100%), <br />
-Hungary_SurpriseCar kihagyva (100%), <br />
-Hungary_SurpriseInBudapest kihagyva (100%), <br />
-Hungary_SwansByTheDanube kihagyva (100%), <br />
-Lithuania_Akmenynas kihagyva (100%), <br />
-Lithuania_OZOParkas kihagyva (100%), <br />
-Netherlands_CrossbowsBeeckestijn kihagyva (100%), <br />
-Netherlands_ErensteinerEasterEggs2 kihagyva (100%), <br />
-Netherlands_EVO2Kerkrade kihagyva (100%), <br />
-Slovakia_Alien kihagyva (100%), <br />
-Sweden_SwedishFlag kihagyva (100%), <br />
-UnitedKingdom_FavershamFatherXmas kihagyva (100%), <br />
-UnitedKingdom_GriffMemorial kihagyva (100%), <br />
-UnitedKingdom_PastebucketMemorial kihagyva (100%), <br />
-UnitedKingdom_RomseyRainbow kihagyva (100%), <br />
-UnitedKingdom_RomseyRainbowUnicorn kihagyva (100%), <br />
-USA_BurlingtonFlamingo kihagyva (100%), <br />
-USA_CandyCaneZee kihagyva (100%), <br />
-USA_ChristmasTree kihagyva (100%), <br />
-USA_GingerbreadMan kihagyva (100%), <br />
-USA_GumballMachine kihagyva (100%), <br />
-USA_HOwlOween kihagyva (100%), <br />
-USA_LakelandCandyCorn kihagyva (100%), <br />
-USA_MamaTsLadybug kihagyva (100%), <br />
-USA_MermaidTail kihagyva (100%), <br />
-USA_OctoberPumpkin kihagyva (100%), <br />
-USA_SantaSirPrize, not updated, 0.0<br />
-USA_Snowman kihagyva (100%), <br />
-USA_SprinkleCupcake kihagyva (100%), <br />
-USA_TheRoundRockOfRoundRock kihagyva (100%), <br />
-USA_WestportSpecials kihagyva (100%), <br />
-Netherlands_TheWall kihagyva (100%), <br />
-Netherlands_PompebledPalet kihagyva (100%), <br />
-Netherlands_GroeneStroom kihagyva (100%), <br />
-Netherlands_Klomp kihagyva (100%), <br />
-Netherlands_EvoAppleEch kihagyva (100%), <br />
-Netherlands_CrossbowGardenEcht kihagyva (100%), <br />
-USA_GreenvilleCloverLeaf kihagyva (100%), <br />
-Denmark_IsvaffelInHilleroed, not updated, 0.0<br />
-Denmark_EmeraldInHilleroed, not updated, 0.0<br />
-Finland_HalkokarinEvovene, not updated, 1.0<br />
-USA_CarettaSeaTurtle kihagyva (100%), <br />
-UnitedKingdom_Uddersfield, not updated, 0.1474926253687272<br />
-Netherlands_LuckyClover kihagyva (100%), <br />
-Poland_Jewel kihagyva (100%), <br />
-Poland_Reksio kihagyva (100%), <br />
-Finland_KokkolanVaakuna kihagyva (100%), <br />
-Germany_PapageiCrumstadt kihagyva (100%), <br />
-USA_XIBirthdayMadHatter kihagyva (100%), <br />
-USA_RobHeartsLou1 kihagyva (100%), <br />
-USA_RobHeartsLou2 kihagyva (100%), <br />
-USA_Corgi kihagyva (100%), <br />
-Poland_ZamekPiastow kihagyva (100%), <br />
-UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
-Canada_HalloweenInOttawa kihagyva (100%), <br />
-Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, not updated, 0.0<br />
-USA_LightningBoltInSapphire, not updated, 0.0<br />
-USA_AppleValley-EvolutionaryFlower, not updated, 0.5<br />
-Germany_Bullseye kihagyva (100%), <br />
-Finland_TampereElectric, not updated, 0.49833887043189407<br />
-USA_MontgomeryBaseball, not updated, 0.0<br />
-USA_HanksBoots, not updated, 0.0<br />
-USA_ColorTheZoo, not updated, 0.0<br />
-Netherlands_SupermanVsBatman kihagyva (100%), <br />
-Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
-Slovakia_IcemenInLove, not updated, 0.0<br />
-Slovakia_TrencinCastle, not updated, 0.0<br />
-UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
-Australia_PiratePetesParrot kihagyva (100%), <br />
-UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
-UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
-UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
-USA_PiratesTreasure kihagyva (100%), <br />
-Australia_QueenslandKoala kihagyva (100%), <br />
-USA_GiraffeInGadsden kihagyva (100%), <br />
-USA_AnaheimSapphire kihagyva (100%), <br />
-Finland_HelsinkiColour kihagyva (100%), <br />
-USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
-Germany_SkylarkFeldlerche kihagyva (100%), <br />
-Netherlands_MysteryBikeField kihagyva (100%), <br />
-Australia_Brisbane, not updated, 0.0<br />
-Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.0<br />
-Germany_DiamantBerlin, not updated, 0.0<br />
-Germany_BerlinBear, not updated, 0.0<br />
-Germany_HonowWappen, not updated, 0.0<br />
-Canada_GatineauEvo, not updated, 0.0<br />
-Germany_ColorsBonn kihagyva (100%), <br />
-Germany_BTHVN2020 kihagyva (100%), <br />
-Canada_GatineauScarletTulip kihagyva (100%), <br />
-Canada_RumballMachine kihagyva (100%), <br />
-Canada_OttawaFireworks kihagyva (100%), <br />
-Canada_HospitalLove kihagyva (100%), <br />
-Hungary_Q94 kihagyva (100%), <br />
-Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
-Hungary_RWG kihagyva (100%), <br />
-Hungary_Grail kihagyva (100%), <br />
-Hungary_DVTKInMiskolc, not updated, 0.0<br />
-Hungary_Beagle kihagyva (100%), <br />
-Hungary_ElectricDebrecen, not updated, 0.7125890736342058<br />
-Hungary_KodalysViolin kihagyva (100%), <br />
-Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
-Hungary_64color kihagyva (100%), <br />
-Hungary_ShieldBudapest, not updated, 0.0<br />
-Hungary_ShieldMiskolc, not updated, 0.0<br />
-Hungary_ShieldEger, not updated, 0.0<br />
-Hungary_MunzeeLogo kihagyva (100%), <br />
-Hungary_GreatChurch kihagyva (100%), <br />
-Canada_SpringInOttawa kihagyva (100%), <br />
-Canada_OttawaNewYears kihagyva (100%), <br />
-Canada_SummerInOttawa kihagyva (100%), <br />
-USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.0<br />
-USA_ChristmasWreath kihagyva (100%), <br />
-USA_WinterOlympics2018 kihagyva (100%), <br />
-USA_R2D2 kihagyva (100%), <br />
-USA_TwinCitiesSnowman kihagyva (100%), <br />
-USA_SimpsonsDonut kihagyva (100%), <br />
-USA_AppleValleyEagle, not updated, 0.0<br />
-USA_DorothyToTheEmerald kihagyva (100%), <br />
-USA_BabyYodaLovesMunzeeMania2020 kihagyva (100%), <br />
-Hungary_KavicsbanyaKecskemet kihagyva (100%), <br />
-Hungary_GyorVgFarm kihagyva (100%), <br />
-Hungary_GyoriVasutiKert, not updated, 0.0<br />
-Hungary_Colors kihagyva (100%), <br />
-Hungary_TocoskertsArrows2 kihagyva (100%), <br />
-Hungary_TocoskertsArrows3, not updated, -69.0<br />
-Hungary_60Color kihagyva (100%), <br />
-Hungary_Cata-Joy kihagyva (100%), <br />
-Hungary_FlatDebrecen, not updated, 0.0<br />
-Hungary_Debrecen, not updated, -69.0<br />
-Hungary_EvolutionDebrecen kihagyva (100%), <br />
-Hungary_JewelSandwich, not updated, 0.0<br />
-Hungary_Cimbi kihagyva (100%), <br />
-Hungary_Picu kihagyva (100%), <br />
-Hungary_Honey kihagyva (100%), <br />
-Hungary_QR kihagyva (100%), <br />
-Hungary_DebreceniKereszt kihagyva (100%), <br />
-Hungary_60Flat kihagyva (100%), <br />
-UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
-UnitedKingdom_HeathrowCrossbowArrow, <b>updated</b>, 638, <a href="https://www.munzee.com/map/gcpsyt1y9/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HeathrowCrossbowArrow.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_JustSmileLondon, <b>updated</b>, 839, <a href="https://www.munzee.com/map/gcpvn9cq4/15.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_JustSmileLondon.json" target="_blank">json</a><br />
-UnitedKingdom_HeathrowFlatSquares, <b>updated</b>, 151, <a href="https://www.munzee.com/map/gcpsykxuu/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_HeathrowFlatSquares.json" target="_blank">json</a><br />
-UnitedKingdom_LondonUnderground, <b>updated</b>, 73, <a href="https://www.munzee.com/map/gcpvk3gxr/15.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_LondonUnderground.json" target="_blank">json</a><br />
-UnitedKingdom_RuleBritanniaArrow, <b>updated</b>, 274, <a href="https://www.munzee.com/map/gcpvhqm6w/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_RuleBritanniaArrow.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_CherryLaneCemetery-CrossGarden, <b>updated</b>, 149, <a href="https://www.munzee.com/map/gcpsvygmw/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_CherryLaneCemetery-CrossGarden.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_EvolutionStrip, <b>updated</b>, 234, <a href="https://www.munzee.com/map/gcpsys5xc/15.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_EvolutionStrip.json" target="_blank">json</a> <b>100%</b><br />
-UnitedKingdom_WestLondonJewel, <b>updated</b>, 95, <a href="https://www.munzee.com/map/gcpsywswp/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_WestLondonJewel.json" target="_blank">json</a> <b>100%</b><br />
-----csoportok<br />
-----városok<br />
-Hungary_city_Debrecen, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqs2c96/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Debrecen.json" target="_blank">json</a><br />
-USA_city_Prattville, <b>updated</b>, <a href="https://www.munzee.com/map/djf88xhm3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Prattville.json" target="_blank">json</a><br />
-----felhasználók<br />
-delfin13_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqkgr9r/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/delfin13_completed.json" target="_blank">json</a><br />
-Norbee97_completed, <b>updated</b>, <a href="https://www.munzee.com/map/u2rqk7rjj/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_completed.json" target="_blank">json</a><br />
-Norbee97_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2rq7fsvq/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Norbee97_empty.json" target="_blank">json</a><br />
-<b>stop</b> - 2022.11.07 21:46:44<br />
-összesen 3155<br />
+USA_Turtle, <b>updated</b>, 600, <a href="https://www.munzee.com/map/dhv9d3vyu/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Turtle.json" target="_blank">json</a><br />
