--- a/feladat.html
+++ b/feladat.html
@@ -3,3 +3,38 @@ Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.9615384615384528<br />
 USA_PrattvilleTrillium, <b>updated</b>, 244, <a href="https://www.munzee.com/map/djf8bbhmk/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PrattvilleTrillium.json" target="_blank">json</a><br />
+Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
+Hungary_TatabanyaBlackhole, not updated, 0.0<br />
+Hungary_VotiveChurch, not updated, -44.470000000000006<br />
+Germany_WappenHalberstadt, not updated, 0.0<br />
+UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
+Slovakia_ChristmasStable, not updated, 0.0<br />
+Slovakia_LePetitPrince, not updated, 0.0<br />
+Australia_TicTacMunzee kihagyva (100%), <br />
+Hungary_FlatMattInBudapest, not updated, 0.0<br />
+USA_PrattvillePansy, not updated, 0.8199999999999932<br />
+Hungary_MinerSymbol, not updated, 0.0<br />
+Hungary_Crossbow, not updated, 0.1700000000000017<br />
+USA_MunzeeLogo, not updated, 0.0<br />
+NewZealand_BrooklynQueensGambit kihagyva (100%), <br />
+USA_JewelJack-o-Lantern, not updated, -0.7506367041198558<br />
+USA_FortWorth2020DumpsterFire, not updated, 0.529100529100532<br />
+UnitedKingdom_LFCBebington, not updated, 0.0<br />
+Finland_Nurmijarvi, not updated, 0.8999999999999915<br />
+Finland_Hyvinkaa, not updated, 0.0<br />
+USA_CanonCity, not updated, 0.0<br />
+UnitedKingdom_RekucisButterfly, not updated, 1.0<br />
+Slovakia_FortressMazeParty, <b>hiba</b> a táblázat megnyitásakor, PERMISSION_DENIED, 0<br />
+USA_LakewoodPrizewheel, not updated, 0.5499999999999972<br />
+Netherlands_TeaAtGrandma, not updated, 1.0<br />
+Canada_Skull kihagyva (100%), <br />
+Netherlands_VlagEcht kihagyva (100%), <br />
+Netherlands_CittaslowEcht kihagyva (100%), <br />
+USA_GreenvilleGreenWave, not updated, 1.0<br />
+Australia_QueensGambit-Horse, not updated, 0.0<br />
+USA_CommerceBarnyard, not updated, 0.7599999999999909<br />
+USA_UtahBeehive, not updated, 0.0<br />
+Canada_DinosaurPark, not updated, 0.0<br />
+UnitedKingdom_BallochIceCream kihagyva (100%), <br />
+Australia_YoureAStar, not updated, 0.18000000000000682<br />
+USA_StAugustinePirateShip, <b>updated</b>, 268, <a href="https://www.munzee.com/map/djq1y8v3x/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StAugustinePirateShip.json" target="_blank">json</a><br />
