--- a/feladat.html
+++ b/feladat.html
@@ -159,3 +159,93 @@ USA_ColorTheZoo, not updated, 0.0<br />
 Netherlands_SupermanVsBatman kihagyva (100%), <br />
 Netherlands_QR-Spaarnwoude kihagyva (100%), <br />
 Slovakia_IcemenInLove, <b>updated</b>, 309, <a href="https://www.munzee.com/map/u2s1yzv55/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_IcemenInLove.json" target="_blank">json</a> <b>100%</b><br />
+Slovakia_TrencinCastle, not updated, 0.0<br />
+UnitedKingdom_HoratioTheHermitCrab kihagyva (100%), <br />
+Australia_PiratePetesParrot kihagyva (100%), <br />
+UnitedKingdom_DownhamCheshireCat kihagyva (100%), <br />
+UnitedKingdom_TheQueensCrown kihagyva (100%), <br />
+UnitedKingdom_SandcastleInSheringham kihagyva (100%), <br />
+USA_PiratesTreasure kihagyva (100%), <br />
+Australia_QueenslandKoala kihagyva (100%), <br />
+USA_GiraffeInGadsden kihagyva (100%), <br />
+USA_AnaheimSapphire kihagyva (100%), <br />
+Finland_HelsinkiColour kihagyva (100%), <br />
+USA_BearmomscoutersXmasPolarBear kihagyva (100%), <br />
+Germany_SkylarkFeldlerche kihagyva (100%), <br />
+Netherlands_MysteryBikeField kihagyva (100%), <br />
+Australia_Brisbane, not updated, 0.0<br />
+Australia_EgyptianMask kihagyva (100%), <br />
+Germany_BerlinMunzeePin, not updated, 0.0<br />
+Germany_DiamantBerlin, not updated, 0.0<br />
+Germany_BerlinBear, not updated, 0.0<br />
+Germany_HonowWappen, not updated, 0.0<br />
+Canada_GatineauEvo, not updated, 0.0<br />
+Germany_ColorsBonn kihagyva (100%), <br />
+Germany_BTHVN2020 kihagyva (100%), <br />
+Canada_GatineauScarletTulip kihagyva (100%), <br />
+Canada_RumballMachine kihagyva (100%), <br />
+Canada_OttawaFireworks kihagyva (100%), <br />
+Canada_HospitalLove kihagyva (100%), <br />
+Hungary_Q94 kihagyva (100%), <br />
+Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
+Hungary_RWG kihagyva (100%), <br />
+Hungary_Grail kihagyva (100%), <br />
+Hungary_DVTKInMiskolc, not updated, 0.0<br />
+Hungary_Beagle kihagyva (100%), <br />
+Hungary_ElectricDebrecen, not updated, 0.7125890736342058<br />
+Hungary_KodalysViolin kihagyva (100%), <br />
+Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
+Hungary_64color kihagyva (100%), <br />
+Hungary_ShieldBudapest, not updated, 0.0<br />
+Hungary_ShieldMiskolc, not updated, 0.0<br />
+Hungary_ShieldEger, not updated, 0.0<br />
+Hungary_MunzeeLogo kihagyva (100%), <br />
+Hungary_GreatChurch kihagyva (100%), <br />
+Canada_SpringInOttawa kihagyva (100%), <br />
+Canada_OttawaNewYears kihagyva (100%), <br />
+Canada_SummerInOttawa kihagyva (100%), <br />
+USA_TheAppleValleyApple kihagyva (100%), <br />
+USA_LighteksMinnesotaWild, not updated, 0.0<br />
+USA_ChristmasWreath kihagyva (100%), <br />
+USA_WinterOlympics2018 kihagyva (100%), <br />
+USA_R2D2 kihagyva (100%), <br />
+USA_TwinCitiesSnowman kihagyva (100%), <br />
+USA_SimpsonsDonut kihagyva (100%), <br />
+USA_AppleValleyEagle, not updated, 0.0<br />
+USA_DorothyToTheEmerald kihagyva (100%), <br />
+USA_BabyYodaLovesMunzeeMania2020 kihagyva (100%), <br />
+Hungary_KavicsbanyaKecskemet kihagyva (100%), <br />
+Hungary_GyorVgFarm kihagyva (100%), <br />
+Hungary_GyoriVasutiKert, not updated, 0.0<br />
+Hungary_Colors kihagyva (100%), <br />
+Hungary_TocoskertsArrows2 kihagyva (100%), <br />
+Hungary_TocoskertsArrows3, not updated, -69.0<br />
+Hungary_60Color kihagyva (100%), <br />
+Hungary_Cata-Joy kihagyva (100%), <br />
+Hungary_FlatDebrecen, not updated, 0.0<br />
+Hungary_Debrecen, not updated, -69.0<br />
+Hungary_EvolutionDebrecen kihagyva (100%), <br />
+Hungary_JewelSandwich, not updated, 0.0<br />
+Hungary_Cimbi kihagyva (100%), <br />
+Hungary_Picu kihagyva (100%), <br />
+Hungary_Honey kihagyva (100%), <br />
+Hungary_QR kihagyva (100%), <br />
+Hungary_DebreceniKereszt kihagyva (100%), <br />
+Hungary_60Flat kihagyva (100%), <br />
+UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
+UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
+UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
+UnitedKingdom_HeathrowFlatSquares, not updated, 0.0<br />
+UnitedKingdom_LondonUnderground, not updated, 0.0<br />
+UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
+UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
+UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
+UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
+----csoportok<br />
+----városok<br />
+Slovakia_city_Bratislava, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1v1wd3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Slovakia_city_Bratislava.json" target="_blank">json</a><br />
+USA_city_Prattville, <b>updated</b>, <a href="https://www.munzee.com/map/djf88xhm3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Prattville.json" target="_blank">json</a><br />
+----felhasználók<br />
+Neloras_empty, <b>updated</b>, <a href="https://www.munzee.com/map/u2s1vzfpn/15.001" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Neloras_empty.json" target="_blank">json</a><br />
+<b>stop</b> - 2022.11.13 01:40:28<br />
+összesen 1817<br />
