--- a/feladat.html
+++ b/feladat.html
@@ -1,18 +1,18 @@
-<b>start</b> - 2022.11.14 01:10:12<br />
+<b>start</b> - 2022.11.15 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.9615384615384528<br />
 USA_PrattvilleTrillium, not updated, 0.45999999999999375<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.0<br />
-Hungary_VotiveChurch, not updated, -44.25000000000001<br />
+Hungary_VotiveChurch, not updated, -44.470000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable, not updated, 0.0<br />
 Slovakia_LePetitPrince, not updated, 0.0<br />
 Australia_TicTacMunzee kihagyva (100%), <br />
 Hungary_FlatMattInBudapest, not updated, 0.0<br />
-USA_PrattvillePansy, <b>updated</b>, 629, <a href="https://www.munzee.com/map/djf88xhm3/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PrattvillePansy.json" target="_blank">json</a><br />
+USA_PrattvillePansy, not updated, 0.0<br />
 Hungary_MinerSymbol, not updated, 0.0<br />
 Hungary_Crossbow, not updated, 0.1700000000000017<br />
 USA_MunzeeLogo, not updated, 0.0<br />
@@ -37,7 +37,7 @@ USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
 UnitedKingdom_BallochIceCream kihagyva (100%), <br />
 Australia_YoureAStar, not updated, 0.18000000000000682<br />
-USA_StAugustinePirateShip, not updated, 0.17999999999999972<br />
+USA_StAugustinePirateShip, not updated, 0.35999999999999943<br />
 Spain_WineOClock kihagyva (100%), <br />
 Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
@@ -45,7 +45,7 @@ UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.3623188405797144<br />
 USA_Turtle, not updated, 0.17636684303350592<br />
 Finland_BioOtokka, not updated, 0.0<br />
-Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
+Canada_GatineauFMGGarden, not updated, 0.8799999999999955<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
 Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
 Switzerland_GiddyUpGo, not updated, 0.0<br />
@@ -148,8 +148,8 @@ Poland_ZamekPiastow kihagyva (100%), <br />
 UnitedKingdom_TadleyJoyCon, not updated, 0.0<br />
 Canada_HalloweenInOttawa kihagyva (100%), <br />
 Slovakia_HungryBatTerry kihagyva (100%), <br />
-USA_LakevillesSeaTurtle, not updated, 0.29999999999999716<br />
-USA_LightningBoltInSapphire, <b>updated</b>, 259, <a href="https://www.munzee.com/map/9zvwq4u8m/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_LightningBoltInSapphire.json" target="_blank">json</a><br />
+USA_LakevillesSeaTurtle, not updated, 0.4000000000000057<br />
+USA_LightningBoltInSapphire, not updated, 0.0<br />
 USA_AppleValley-EvolutionaryFlower, not updated, 0.0<br />
 Germany_Bullseye kihagyva (100%), <br />
 Finland_TampereElectric, not updated, 0.9966777408637881<br />
@@ -243,7 +243,6 @@ UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
 UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
 ----csoportok<br />
 ----városok<br />
-USA_city_Prattville, <b>updated</b>, <a href="https://www.munzee.com/map/djf88xhm3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Prattville.json" target="_blank">json</a><br />
 ----felhasználók<br />
-<b>stop</b> - 2022.11.14 01:35:08<br />
-összesen 1495<br />
+<b>stop</b> - 2022.11.15 01:21:21<br />
+összesen 673<br />
