--- a/feladat.html
+++ b/feladat.html
@@ -38,3 +38,21 @@ Canada_DinosaurPark, not updated, 0.0<br />
 UnitedKingdom_BallochIceCream kihagyva (100%), <br />
 Australia_YoureAStar, not updated, 0.18000000000000682<br />
 USA_StAugustinePirateShip, <b>updated</b>, 273, <a href="https://www.munzee.com/map/djq1y8v3x/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StAugustinePirateShip.json" target="_blank">json</a><br />
+Spain_WineOClock kihagyva (100%), <br />
+Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
+Netherlands_PacMunzee, not updated, 0.0<br />
+UnitedKingdom_BristolBalloon, not updated, 0.0<br />
+USA_USMGoldenEagles, not updated, 0.48309178743961567<br />
+USA_Turtle, not updated, 0.17636684303350592<br />
+Finland_BioOtokka, not updated, 0.0<br />
+Canada_GatineauFMGGarden, not updated, 0.8799999999999955<br />
+Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
+Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
+Switzerland_GiddyUpGo, not updated, 0.0<br />
+Belgium_KnokkeHeist, not updated, 0.25<br />
+Hungary_Evolution, not updated, 0.8333333333333286<br />
+Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
+USA_OfficerDown, not updated, 0.0<br />
+Hungary_Brigetio, not updated, 0.3846153846153797<br />
+Hungary_GoatInKecskemet, not updated, 0.7099999999999937<br />
+Hungary_TaskasSmiley, <b>updated</b>, 198, <a href="https://www.munzee.com/map/u2mxgdrju/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_TaskasSmiley.json" target="_blank">json</a><br />
