--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2022.11.16 01:10:07<br />
+<b>start</b> - 2022.11.16 07:14:54<br />
 Slovakia_Giraffe, not updated, 0.0<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.9615384615384528<br />
@@ -37,7 +37,7 @@ USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
 UnitedKingdom_BallochIceCream kihagyva (100%), <br />
 Australia_YoureAStar, not updated, 0.18000000000000682<br />
-USA_StAugustinePirateShip, <b>updated</b>, 273, <a href="https://www.munzee.com/map/djq1y8v3x/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StAugustinePirateShip.json" target="_blank">json</a><br />
+USA_StAugustinePirateShip, not updated, 0.0<br />
 Spain_WineOClock kihagyva (100%), <br />
 Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
@@ -55,7 +55,7 @@ Netherlands_WapenVanEnkhuizen, not updated, 1.0<br />
 USA_OfficerDown, not updated, 0.0<br />
 Hungary_Brigetio, not updated, 0.3846153846153797<br />
 Hungary_GoatInKecskemet, not updated, 0.7099999999999937<br />
-Hungary_TaskasSmiley, <b>updated</b>, 198, <a href="https://www.munzee.com/map/u2mxgdrju/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_TaskasSmiley.json" target="_blank">json</a><br />
+Hungary_TaskasSmiley, not updated, 0.0<br />
 Germany_Karlsruhe-StadtDesRechts, not updated, 0.0<br />
 Slovakia_FlagOfSlovakia, not updated, 0.6500000000000021<br />
 Hungary_SurpriseAirline, not updated, 0.0<br />
@@ -241,8 +241,4 @@ UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
 UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
 UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
 UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-<b>stop</b> - 2022.11.16 01:28:53<br />
-összesen 1126<br />
+UnitedKingdom_TheBunnyFields, <b>updated</b>, 129, <a href="https://www.munzee.com/map/gcpsyn7wf/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_TheBunnyFields.json" target="_blank">json</a> <b>100%</b><br />
